started fix for popup dark mode

--- a/IDEAr/src/app/admin-popup/admin-popup.component.css
+++ b/IDEAr/src/app/admin-popup/admin-popup.component.css
@@ -13,7 +13,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
- background-color: white;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   z-index: 9999;
@@ -35,7 +34,6 @@
 }
 
 .editin-popup-header {
-  background-color: #f0f0f0;
   font-weight: bold;
   font-size: 30px;
   text-align: center;
@@ -43,7 +41,6 @@
 }
 
 .editing-popup-info {
-  background-color: #f0f0f0;
   border: solid 1px grey;
   border-radius: 6px;
   font-size: 15px;
@@ -80,9 +77,6 @@
 table {
   width: 100%;
   table-layout: auto; /* Allow columns to adjust based on content */
-}
-tr:hover {
-  background-color: #f5f5f5;
 }
 
 th,
